--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,21 @@
         <item>Put Option</item>
     </string-array>
 
+    <string-array name="Simulation">
+
+        <item>Set Simulation</item>
+        <item>100</item>
+        <item>200</item>
+        <item>300</item>
+        <item>400</item>
+        <item>500</item>
+        <item>600</item>
+        <item>700</item>
+        <item>800</item>
+        <item>900</item>
+        <item>1000</item>
+
+    </string-array>
 
     <string-array name="SP500List">
 
@@ -33,7 +48,6 @@
         <item>Alexion Pharmaceuticals</item>
         <item>Align Technology</item>
         <item>Allegion</item>
-        <item>Allergan Plc</item>
         <item>Alliance Data Systems</item>
         <item>Alliant Energy Corp</item>
         <item>Allstate Corp</item>
@@ -53,7 +67,6 @@
         <item>AMETEK Inc.</item>
         <item>Amgen Inc.</item>
         <item>Amphenol Corp</item>
-        <item>Anadarko Petroleum Corp</item>
         <item>Andeavor</item>
         <item>ANSYS</item>
         <item>Anthem Inc.</item>
@@ -77,7 +90,6 @@
         <item>Ball Corp</item>
         <item>Bank of America Corp</item>
         <item>Baxter International Inc.</item>
-        <item>BB&amp;T Corporation</item>
         <item>Becton Dickinson</item>
         <item>Berkshire Hathaway</item>
         <item>Best Buy Co. Inc.</item>
@@ -105,8 +117,6 @@
         <item>Caterpillar Inc.</item>
         <item>Cboe Global Markets</item>
         <item>CBRE Group</item>
-        <item>CBS Corp.</item>
-        <item>Celgene Corp.</item>
         <item>Centene Corporation</item>
         <item>CenterPoint Energy</item>
         <item>CenturyLink Inc</item>
@@ -163,8 +173,6 @@
         <item>Dollar Tree</item>
         <item>Dominion Energy</item>
         <item>Dover Corp.</item>
-        <item>DowDuPont</item>
-        <item>Dr Pepper Snapple Group</item>
         <item>DTE Energy Co.</item>
         <item>Duke Energy</item>
         <item>Duke Realty Corp</item>
@@ -231,11 +239,9 @@
         <item>Halliburton Co.</item>
         <item>Hanesbrands Inc</item>
         <item>Harley-Davidson</item>
-        <item>Harris Corporation</item>
         <item>Hartford Financial Svc.Gp.</item>
         <item>Hasbro Inc.</item>
         <item>HCA Holdings</item>
-        <item>HCP Inc.</item>
         <item>Helmerich &amp; Payne</item>
         <item>Henry Schein</item>
         <item>Hess Corporation</item>
@@ -286,12 +292,10 @@
         <item>Kraft Heinz Co</item>
         <item>Kroger Co.</item>
         <item>L Brands Inc.</item>
-        <item>L-3 Communications Holdings</item>
         <item>Laboratory Corp. of America Holding</item>
         <item>Lam Research</item>
         <item>Leggett &amp; Platt</item>
         <item>Lennar Corp.</item>
-        <item>Leucadia National Corp.</item>
         <item>Lilly (Eli) &amp; Co.</item>
         <item>Lincoln National</item>
         <item>LKQ Corporation</item>
@@ -318,7 +322,6 @@
         <item>MetLife Inc.</item>
         <item>Mettler Toledo</item>
         <item>MGM Resorts International</item>
-        <item>Michael Kors Holdings</item>
         <item>Microchip Technology</item>
         <item>Micron Technology</item>
         <item>Microsoft Corp.</item>
@@ -339,7 +342,6 @@
         <item>NetApp</item>
         <item>Netflix Inc.</item>
         <item>Newell Brands</item>
-        <item>Newfield Exploration Co</item>
         <item>Newmont Mining Corporation</item>
         <item>News Corp. Class A</item>
         <item>News Corp. Class B</item>
@@ -381,7 +383,6 @@
         <item>Polo Ralph Lauren Corp.</item>
         <item>PPG Industries</item>
         <item>PPL Corp.</item>
-        <item>Praxair Inc.</item>
         <item>Principal Financial Group</item>
         <item>Procter &amp; Gamble</item>
         <item>Progressive Corp.</item>
@@ -397,9 +398,7 @@
         <item>Quest Diagnostics</item>
         <item>Range Resources Corp.</item>
         <item>Raymond James Financial Inc.</item>
-        <item>Raytheon Co.</item>
         <item>Realty Income Corporation</item>
-        <item>Red Hat Inc.</item>
         <item>Regency Centers Corporation</item>
         <item>Regeneron</item>
         <item>Regions Financial Corp.</item>
@@ -431,9 +430,7 @@
         <item>State Street Corp.</item>
         <item>Stericycle Inc</item>
         <item>Stryker Corp.</item>
-        <item>SunTrust Banks</item>
         <item>SVB Financial</item>
-        <item>Symantec Corp.</item>
         <item>Synchrony Financial</item>
         <item>Synopsys Inc.</item>
         <item>Sysco Corp.</item>
@@ -456,8 +453,6 @@
         <item>Tiffany &amp; Co.</item>
         <item>Time Warner Inc.</item>
         <item>TJX Companies Inc.</item>
-        <item>Torchmark Corp.</item>
-        <item>Total System Services</item>
         <item>Tractor Supply Company</item>
         <item>TransDigm Group</item>
         <item>TripAdvisor</item>
@@ -474,7 +469,6 @@
         <item>United Health Group Inc.</item>
         <item>United Parcel Service</item>
         <item>United Rentals Inc.</item>
-        <item>United Technologies</item>
         <item>Universal Health Services Inc.</item>
         <item>Unum Group</item>
         <item>V.F. Corp.</item>
@@ -503,7 +497,6 @@
         <item>Whirlpool Corp.</item>
         <item>Williams Cos.</item>
         <item>Willis Towers Watson</item>
-        <item>Wyndham Worldwide</item>
         <item>Wynn Resorts Ltd</item>
         <item>Xcel Energy Inc</item>
         <item>Xerox Corp.</item>
@@ -518,35 +511,13 @@
     </string-array>
 
 
-    <string-array name="Simulation">
-
-        <item>Set Simulation</item>
-        <item>100</item>
-        <item>200</item>
-        <item>300</item>
-        <item>400</item>
-        <item>500</item>
-        <item>600</item>
-        <item>700</item>
-        <item>800</item>
-        <item>900</item>
-        <item>1000</item>
-
-    </string-array>
-
-
     <string-array name="IS03List">
 
         <item>Select Country</item>
         <item>Afghanistan</item>
-        <item>Åland Islands</item>
         <item>Albania</item>
         <item>Algeria</item>
-        <item>American Samoa</item>
-        <item>Andorra</item>
         <item>Angola</item>
-        <item>Anguilla</item>
-        <item>Antarctica</item>
         <item>Antigua and Barbuda</item>
         <item>Argentina</item>
         <item>Armenia</item>
@@ -562,40 +533,29 @@
         <item>Belgium</item>
         <item>Belize</item>
         <item>Benin</item>
-        <item>Bermuda</item>
         <item>Bhutan</item>
-        <item>Bolivia Plurinational State of</item>
-        <item>Bonaire Sint Eustatius and Saba</item>
+        <item>Bolivia</item>
         <item>Bosnia and Herzegovina</item>
         <item>Botswana</item>
-        <item>Bouvet Island</item>
         <item>Brazil</item>
-        <item>British Indian Ocean Territory</item>
         <item>Brunei Darussalam</item>
         <item>Bulgaria</item>
         <item>Burkina Faso</item>
         <item>Burundi</item>
+        <item>Cabo Verde</item>
         <item>Cambodia</item>
         <item>Cameroon</item>
         <item>Canada</item>
-        <item>Cape Verde</item>
-        <item>Cayman Islands</item>
-        <item>Central African Republic</item>
         <item>Chad</item>
         <item>Chile</item>
         <item>China</item>
-        <item>Christmas Island</item>
-        <item>Cocos (Keeling) Islands</item>
         <item>Colombia</item>
         <item>Comoros</item>
-        <item>Congo</item>
-        <item>Congo the Democratic Republic of the</item>
-        <item>Cook Islands</item>
+        <item>Congo Dem. Rep.</item>
+        <item>Congo Rep.</item>
         <item>Costa Rica</item>
-        <item>Côte dIvoire</item>
+        <item>Cote dIvoire</item>
         <item>Croatia</item>
-        <item>Cuba</item>
-        <item>Curaçao</item>
         <item>Cyprus</item>
         <item>Czech Republic</item>
         <item>Denmark</item>
@@ -603,72 +563,57 @@
         <item>Dominica</item>
         <item>Dominican Republic</item>
         <item>Ecuador</item>
-        <item>Egypt</item>
+        <item>Egypt Arab Rep.</item>
         <item>El Salvador</item>
         <item>Equatorial Guinea</item>
         <item>Eritrea</item>
         <item>Estonia</item>
         <item>Ethiopia</item>
-        <item>Falkland Islands (Malvinas)</item>
-        <item>Faroe Islands</item>
         <item>Fiji</item>
         <item>Finland</item>
         <item>France</item>
-        <item>French Guiana</item>
-        <item>French Polynesia</item>
-        <item>French Southern Territories</item>
         <item>Gabon</item>
         <item>Gambia</item>
         <item>Georgia</item>
         <item>Germany</item>
         <item>Ghana</item>
-        <item>Gibraltar</item>
         <item>Greece</item>
-        <item>Greenland</item>
         <item>Grenada</item>
-        <item>Guadeloupe</item>
-        <item>Guam</item>
         <item>Guatemala</item>
-        <item>Guernsey</item>
         <item>Guinea</item>
         <item>Guinea-Bissau</item>
         <item>Guyana</item>
         <item>Haiti</item>
-        <item>Heard Island and McDonald Islands</item>
-        <item>Holy See (Vatican City State)</item>
         <item>Honduras</item>
-        <item>Hong Kong</item>
+        <item>Hong Kong SAR China</item>
         <item>Hungary</item>
         <item>Iceland</item>
         <item>India</item>
         <item>Indonesia</item>
-        <item>Iran Islamic Republic of</item>
+        <item>Iran Islamic Rep.</item>
         <item>Iraq</item>
         <item>Ireland</item>
-        <item>Isle of Man</item>
         <item>Israel</item>
         <item>Italy</item>
         <item>Jamaica</item>
         <item>Japan</item>
-        <item>Jersey</item>
         <item>Jordan</item>
         <item>Kazakhstan</item>
         <item>Kenya</item>
         <item>Kiribati</item>
-        <item>Korea Republic of</item>
+        <item>Korea Rep</item>
         <item>Kuwait</item>
-        <item>Kyrgyzstan</item>
-        <item>Lao Peoples Democratic Republic</item>
+        <item>Kyrgyz Republic</item>
+        <item>Lao PDR</item>
         <item>Latvia</item>
         <item>Lebanon</item>
         <item>Lesotho</item>
         <item>Liberia</item>
         <item>Libya</item>
-        <item>Liechtenstein</item>
         <item>Lithuania</item>
         <item>Luxembourg</item>
-        <item>Macao</item>
-        <item>Macedonia the former Yugoslav Republic of</item>
+        <item>Macao SAR China</item>
+        <item>Macedonia FYR</item>
         <item>Madagascar</item>
         <item>Malawi</item>
         <item>Malaysia</item>
@@ -676,58 +621,39 @@
         <item>Mali</item>
         <item>Malta</item>
         <item>Marshall Islands</item>
-        <item>Martinique</item>
         <item>Mauritania</item>
         <item>Mauritius</item>
-        <item>Mayotte</item>
         <item>Mexico</item>
-        <item>Micronesia Federated States of</item>
-        <item>Moldova Republic of</item>
-        <item>Monaco</item>
+        <item>Micronesia Fed. Sts.</item>
+        <item>Moldova</item>
         <item>Mongolia</item>
         <item>Montenegro</item>
-        <item>Montserrat</item>
         <item>Morocco</item>
         <item>Mozambique</item>
         <item>Myanmar</item>
         <item>Namibia</item>
-        <item>Nauru</item>
         <item>Nepal</item>
         <item>Netherlands</item>
-        <item>New Caledonia</item>
         <item>New Zealand</item>
         <item>Nicaragua</item>
         <item>Niger</item>
         <item>Nigeria</item>
-        <item>Niue</item>
-        <item>Norfolk Island</item>
-        <item>Northern Mariana Islands</item>
         <item>Norway</item>
         <item>Oman</item>
         <item>Pakistan</item>
         <item>Palau</item>
-        <item>Palestine State of</item>
         <item>Panama</item>
         <item>Papua New Guinea</item>
         <item>Paraguay</item>
         <item>Peru</item>
         <item>Philippines</item>
-        <item>Pitcairn</item>
         <item>Poland</item>
         <item>Portugal</item>
         <item>Puerto Rico</item>
         <item>Qatar</item>
-        <item>Réunion</item>
         <item>Romania</item>
         <item>Russian Federation</item>
         <item>Rwanda</item>
-        <item>Saint Barthélemy</item>
-        <item>Saint Helena Ascension and Tristan da Cunha</item>
-        <item>Saint Kitts and Nevis</item>
-        <item>Saint Lucia</item>
-        <item>Saint Martin (French part)</item>
-        <item>Saint Pierre and Miquelon</item>
-        <item>Saint Vincent and the Grenadines</item>
         <item>Samoa</item>
         <item>San Marino</item>
         <item>Sao Tome and Principe</item>
@@ -737,53 +663,44 @@
         <item>Seychelles</item>
         <item>Sierra Leone</item>
         <item>Singapore</item>
-        <item>Sint Maarten (Dutch part)</item>
-        <item>Slovakia</item>
+        <item>Slovak Republic</item>
         <item>Slovenia</item>
         <item>Solomon Islands</item>
-        <item>Somalia</item>
         <item>South Africa</item>
-        <item>South Georgia and the South Sandwich Islands</item>
         <item>South Sudan</item>
         <item>Spain</item>
         <item>Sri Lanka</item>
+        <item>St. Kitts and Nevis</item>
+        <item>St. Lucia</item>
+        <item>St. Vincent and the Grenadines</item>
         <item>Sudan</item>
         <item>Suriname</item>
-        <item>Svalbard and Jan Mayen</item>
         <item>Swaziland</item>
         <item>Sweden</item>
         <item>Switzerland</item>
         <item>Syrian Arab Republic</item>
-        <item>Taiwan Province of China</item>
         <item>Tajikistan</item>
-        <item>Tanzania United Republic of</item>
+        <item>Tanzania</item>
         <item>Thailand</item>
         <item>Timor-Leste</item>
         <item>Togo</item>
-        <item>Tokelau</item>
         <item>Tonga</item>
         <item>Trinidad and Tobago</item>
         <item>Tunisia</item>
         <item>Turkey</item>
         <item>Turkmenistan</item>
-        <item>Turks and Caicos Islands</item>
         <item>Tuvalu</item>
         <item>Uganda</item>
         <item>Ukraine</item>
         <item>United Arab Emirates</item>
         <item>United Kingdom</item>
         <item>United States</item>
-        <item>United States Minor Outlying Islands</item>
         <item>Uruguay</item>
         <item>Uzbekistan</item>
         <item>Vanuatu</item>
-        <item>Venezuela Bolivarian Republic of</item>
-        <item>Viet Nam</item>
-        <item>Virgin Islands British</item>
-        <item>Virgin Islands U.S.</item>
-        <item>Wallis and Futuna</item>
-        <item>Western Sahara</item>
-        <item>Yemen</item>
+        <item>Venezuela RB</item>
+        <item>Vietnam</item>
+        <item>Yemen Rep.</item>
         <item>Zambia</item>
         <item>Zimbabwe</item>
 
