Changed project title.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Data Driven Finance</string>
+    <string name="app_name">ProdFinance</string>
     <!-- TODO: Remove or change this placeholder text -->
 
     <string-array name="Valuation">
